<resources>
    <string name="app_name">MySize</string>
    <string name="neckHint">首回り</string>
    <string name="sleeveHint">裄丈</string>
    <string name="waistHint">腰回り</string>
    <string name="insermHint">股下</string>
    <string name="saveButtonText">保存</string>
    <string name="heightText">身長</string>
    <string name="heightDefaultValue">170</string>
    <string name="height1_Value">140</string>
    <string name="height2_Value">150</string>
    <string name="height3_Value">160</string>
    <string name="height4_Value">170</string>
</resources>
